--- a/Images.html
+++ b/Images.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2>HTML Image</h2>
-<img src="self image.png" alt="self image" width="500" height="333">
+<img src="Images/self image.png" alt="self image" width="500" height="333">
 
 </body>
 </html>
